Done with all types of bindings

--- a/interpolation/src/app/app.component.html
+++ b/interpolation/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- app.component.html -->
+<p>InterPolation</p>
 <div>
   <h1>{{ title }}</h1>
   <p>Name: {{ user.name }}</p>
@@ -8,3 +9,10 @@
 </div>
 <p>Sum: {{ a + b }}</p>
 {{ htmlString }}
+
+<p>Event_binding</p>
+<app-event-binding></app-event-binding>
+<p>property_binding</p>
+<app-property-binding></app-property-binding>
+<p>two_way_binding</p>
+<app-two-way-binding></app-two-way-binding>
