--- a/InterpolationAndBinding/src/app/app.component.html
+++ b/InterpolationAndBinding/src/app/app.component.html
@@ -16,3 +16,9 @@
 <app-property-binding></app-property-binding>
 <p>two_way_binding</p>
 <app-two-way-binding></app-two-way-binding>
+<p>Template reference variable</p>
+<app-template-reference-variables></app-template-reference-variables>
+<p>Parent Component</p>
+<app-parent-component></app-parent-component>
+<p>Child Component</p>
+<app-child-component></app-child-component>
