Done parent child interaction

--- a/InterpolationAndBinding/src/app/parent-component/parent-component.component.html
+++ b/InterpolationAndBinding/src/app/parent-component/parent-component.component.html
@@ -1,2 +1,6 @@
-<app-child (messageEvent)="receiveMessage($event)"></app-child>
-<p>{{ message }}</p>
+<p>Parent to child message</p>
+<p>Message from child: {{ message }}</p>
+<app-child-component
+  [childMessage]="parentMessage"
+  (messageEvent)="receiveMessage($event)"
+></app-child-component>
